src/App.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

* {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  vertical-align: baseline;
  background: transparent;
  scroll-behavior: smooth;
}

body {
  width: 99vw;
  background-image: url(https://images.unsplash.com/photo-1612416364638-753a3834455c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80);
  background-attachment:fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

a {
  font-weight: normal;
  font-style: normal;
  text-decoration: none;
}

nav {
  position:fixed;
  top:0;
  left:0;
  display:flex;
  min-height: 3rem;
  width: 100vw;
  justify-content: center;
  background-image: url(https://images.unsplash.com/photo-1612416364638-753a3834455c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80);
  background-attachment:fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  z-index:2;
  font-family: roboto;
}

.navlist {
  display:flex;
  width: 67vw;
  min-width: 300px;
  justify-content:space-between;
  align-items:center;
}

.navlist a {
  color: white;
  padding: 1rem;
  width: 300px;
  text-align: center;
  font-style: italic;
}

.navlist a:hover {
  outline: 2px solid greenyellow;
  color: greenyellow;
  
}


#welcome-section {
  display:flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  height: 95vh;
  position:relative;
}

.icons {
  color: greenyellow;
  margin-right: 1rem;
}

#welcome-section p {
  margin-bottom:2rem;
}

h1 {
  font-family: roboto;
  font-size:3rem;
  border: transparent;
  color: white;
  letter-spacing: 0.3rem;
}

#welcome-section p {
  color: white;
  margin-top: 1rem;
  text-align: center;
}

.hero-footer {
  color: white;
  position: absolute;
  top: 95%;
  left: 47%;
  border-top: 20px solid white;
  border-left: 20px solid transparent;
  border-right: 20px solid transparent;
  border-bottom: 20px solid white;
}

.hero-footer a {
  color: white;
}

main {
  margin: 0 auto;
  max-width: 1200px;
}

#projects {
  display: flex;
  flex-direction:column;
  align-items: center;
  padding-top: 1rem;
}

h2 {
  font-family: roboto;
  font-size:3rem;
  text-align: center;
  font-style: normal;
  color: white;
  margin-top: 2rem;
  padding-bottom: 2rem;
}

.filter-bar {
  display: flex;
  min-height: 30px;
  width: 50vw;
  margin-bottom: 1rem;
  flex-wrap: wrap;
  justify-content: center;
  gap: 0.25rem;
  font-family: roboto;
}

.filter-btn {
  border: 2px solid white;
  border-radius: 10px;
  min-width: 80px;
  width: 25%;
  color: white;
}

.filter-btn:hover {
  border: 2px solid greenyellow;
  color: greenyellow;
}

.green {
  border: 2px solid greenyellow;
  color: greenyellow;
}

.clear-btn {
  border: 2px solid white;
  color: white;
  min-width: 80px;
  width: 25%;
}

.project-tile {
  background-color: transparent;
  box-sizing: border-box;
  border: white 4px solid;
  min-width: 300px;
  min-height: 30px;
  width: 50vw;
  margin: 0.5rem;
  font-family: roboto;
  font-weight: bolder;
  }

.project-tile summary {
  color: white;
  font-size: 1rem;
  padding: 1rem;
  border-bottom: white 3px solid;
  letter-spacing: 0.5rem;
}

.project-tile p {
  color: white;
  padding: 0.5rem;
  text-align: justify;
  padding-right: 2rem;
}

.project-tile a {
  text-decoration: none;
  color: greenyellow;
  font-weight: bolder;
  text-shadow: 1px 1px white;
}

.project-tile a:hover {
  text-decoration: underline solid salmon 0.001px;
}

.project-card {
  position: relative;
  padding: 1rem;
  padding-bottom: 2rem;
}

.project-card a {
  position: absolute;
  bottom: 0;
  left: 0;
  padding-left: 1.5rem;
  padding-bottom: 1rem;
}

.project-card .svgs {
  position: absolute;
  display: flex;
  bottom: 1rem;
  right: 10px;
  color: white;
  gap: 0.25rem;
}

#about {
  padding: 2rem;
  font-family: roboto;
}

#about h2 {
  margin-bottom: 1rem;
}

#about p {
  font-family: roboto;
  line-height: 2rem;
  padding: 1rem;
  color: white;
  text-align: justify;
  margin: 0 auto;
}

#about p a {
  text-decoration: none;
  color: greenyellow;
  font-weight: bolder;
}

#about p a:hover {
  text-decoration: underline solid salmon 0.001px;
}

footer {
  color: white;
  bottom: 0;
  text-align: justify;
  font-family: roboto;
  font-size: 0.7rem;
  margin: 0 3rem 0 3rem;
  padding-bottom: 1rem;
}

